--- a/.env
+++ b/.env
@@ -1,10 +1,6 @@
-# Database Configuration
-DATABASE_URL=postgresql+psycopg2://neondb_owner:npg_pxB3uPVGAY8Q@ep-cool-tooth-a1q26pdc-pooler.ap-southeast-1.aws.neon.tech/neondb?sslmode=require
-
-# Authentication
-JWT_SECRET=hello
-ADMIN_API_KEY=helloworld
-
-# Server Configuration
+DATABASE_URL=postgresql+psycopg://username:password@host:port/database
+JWT_SECRET=your_jwt_secret
+ADMIN_API_KEY=your_admin_api_key
 PORT=5000
 DEBUG=True
+TZ=UTC
